# FTML

./: .envrc  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  requirements.txt  simulation2.py
.github/workflows/: latex.yml
application of supervised learning/: application of supervised learning.ipynb
classification on a given dataset/: Classification on a given dataset.ipynb
classification on a given dataset/.ipynb_checkpoints/: Classification on a given dataset-checkpoint.ipynb  Untitled-checkpoint.ipynb
exercice_1/: simulation.py
exercice_2/: simulation2.py
exercise3/: estimation.ipynb
exercise4/: regression.ipynb
exercise_8/: clustering.ipynb
report/: main.tex
report/exercises/: exercise3.tex
report/struct/: structure.tex
scripts/: generate_output_cells.sh
