[tool.poetry]
name = "ftml"
version = "0.1.0"
description = ""
authors = ["Gabriel Huet de Froberville <gabriel.huet-de-froberville@epita.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
