[tool.poetry]
name = "ftml"
version = "0.1.0"
description = ""
authors = ["Gabriel Huet de Froberville <gabriel.huet-de-froberville@epita.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.25.0"
jupyter = "^1.0.0"
notebook = "^6.5.4"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
scikit-learn = "^1.2.2"
ipywidgets = "^8.0.6"
black = "^23.3.0"
seaborn = "^0.12.2"
gap-stat = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
